Fixed issue where photos jumped to a new line

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,26 +2,26 @@
 	/**************************
 	   TWO COLUMN LAYOUT
     **************************/
-    
+
     #primary {
         width: 50%;
         float: left;
     }
-    
+
     #secondary {
         width: 40%;
         float: right;
-    } 
-    
-    
+    }
+
+
 }
 
 @media screen and (min-width: 550px) and (max-width:705px) {
     #gallery li {
         width: 45%;
     }
-    
-    #gallery li:nth-child(3n) {
+
+    #gallery li:nth-child(3) {
         clear: left;
     }
 }
@@ -30,7 +30,7 @@
 	/**************************
 	   HEADER
     **************************/
-    
+
     nav {
         background: none;
         float: right;
@@ -38,44 +38,44 @@
         text-align: right;
         width: 45%;
     }
-    
+
     #logo {
         float: left;
         margin-left: 5%;
         text-align: left;
         width: 45%
     }
-    
+
     h1 {
         font-size: 2.5em;
     }
-    
+
     h2 {
         font-size: 0.825em;
         margin-bottom: 20px
     }
-    
+
     header {
         border-bottom: 5px solid #599a68;
         margin-bottom: 60px;
     }
-    
+
     /**************************
 	   PAGE: PORTFOLIO
     **************************/
-    
+
     #gallery li {
         width: 28.3333%;
     }
-    
-    #gallery li:nth-child(4n) {
+
+    #gallery li:nth-child(4) {
         clear: left;
     }
 
     /**************************
 	   PAGE: ABOUT
     **************************/
-    
+
     .profile-photo {
         float: left;
         margin: 0 5% 80px 0;
